--- a/management.html
+++ b/management.html
@@ -130,6 +130,7 @@
                     >Privacy Policy</a
                   >
                 </li>
+                <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
               </ul>
             </li>
             <li>
@@ -199,7 +200,7 @@
             <li>
               <a class="nav-link scrollto" href="contact.html">Support</a>
             </li>
-            <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
+            <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
 
                <li>
               <a class="nav-link scrollto" href="property.html">Properties</a>
