--- a/loanadmin.html
+++ b/loanadmin.html
@@ -141,6 +141,7 @@
                     >Privacy Policy</a
                   >
                 </li>
+                <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
               </ul>
             </li>
             <li>
@@ -210,7 +211,7 @@
             <li>
               <a class="nav-link scrollto" href="contact.html">Support</a>
             </li>
-            <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
+            <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
 
             <li>
               <a class="nav-link scrollto" href="property.html">Properties</a>
