--- a/new.html
+++ b/new.html
@@ -332,7 +332,8 @@ Message Sent
               </li>
               <li><a href="./assets/books/Whistle-Blowing-Policy.pdf">Whitsle Blower Policy</a></li>
               <li><a href="./assets/books/GUIDELINES-ON-ACCESSING-RETIREMENT-SAVINGS-ACCOUNT.pdf">RSA Access Guidelines</a></li>
-              <li><a href="./assets/books/Privacy-policy-IHMB-LSYS-004.pdf">Privacy Policy</a></li>
+               <li><a href="./assets/books/Privacy-policy-IHMB-LSYS-004.pdf">Privacy Policy</a></li>
+              <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
             
             </ul>
           </li>
@@ -358,6 +359,7 @@ Message Sent
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Support</a></li>
+          <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
         
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
           <li>
