--- a/nhfform.html
+++ b/nhfform.html
@@ -73,7 +73,8 @@
               </li>
               <li><a href="./assets/books/Whistle-Blowing-Policy.pdf">Whitsle Blower Policy</a></li>
               <li><a href="./assets/books/GUIDELINES-ON-ACCESSING-RETIREMENT-SAVINGS-ACCOUNT.pdf">RSA Access Guidelines</a></li>
-              <li><a href="./assets/books/Privacy-policy-IHMB-LSYS-004.pdf">Privacy Policy</a></li>
+               <li><a href="./assets/books/Privacy-policy-IHMB-LSYS-004.pdf">Privacy Policy</a></li>
+              <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
             
             </ul>
           </li>
@@ -98,7 +99,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Support</a></li>
-          <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
+          <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
 
         
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
