--- a/privacy.html
+++ b/privacy.html
@@ -137,7 +137,8 @@ p {
               </li>
               <li><a href="./assets/books/Whistle-Blowing-Policy.pdf">Whitsle Blower Policy</a></li>
               <li><a href="./assets/books/GUIDELINES-ON-ACCESSING-RETIREMENT-SAVINGS-ACCOUNT.pdf">RSA Access Guidelines</a></li>
-              <li><a href="./assets/books/Privacy-policy-IHMB-LSYS-004.pdf">Privacy Policy</a></li>
+               <li><a href="./assets/books/Privacy-policy-IHMB-LSYS-004.pdf">Privacy Policy</a></li>
+              <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
             
             </ul>
           </li>
@@ -156,7 +157,7 @@ p {
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="contact.html">Support</a></li>
-        
+          <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
           <li>
             <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blog Posts</a>
