--- a/homevest.html
+++ b/homevest.html
@@ -261,6 +261,7 @@
                             </div>
                             <li> <a href="https://bit.ly/IHMBHomevest" target="_blank" >See the HomeVest Brochure</a></li>
                             <li><a href="https://youtu.be/Adp80WMkF88" target="_blank">Watch the Walk-through Animation</a></li>
+                            <li><a href="property.html" target="_blank">Click here to see Properties by our Development Partners</a></li>
                         </ul>
                     </article>
             
