--- a/homevest.html
+++ b/homevest.html
@@ -253,7 +253,7 @@
                                   </tr>
                                   <tr>
                                     <td class="text-nowrap">Aderemi Onifade</td>
-                                    <td class="text-nowrap">aderemi.onifade@ivantage.africa</td>
+                                    <td class="text-nowrap">aderemi.onifade@@imperialmortgagebank.com</td>
                                     <td class="text-nowrap">0806 682 8476</td> 
                                   </tr>
                                 </tbody>
