--- a/new.html
+++ b/new.html
@@ -571,11 +571,11 @@ Message Sent
       currentSalary
      }
 
-     console.log(jsonObject);
+    //  console.log(jsonObject);
      
     try {
       // Post the JSON to an API
-      const response = await fetch("http://127.0.0.1:3200/homevest-enquiry", {
+      const response = await fetch("https://ahof.imperialmortgagebank.com/WEBSITE/homevest-enquiry", {
         // Replace with your API endpoint
         method: "POST",
         headers: {
@@ -593,6 +593,7 @@ Message Sent
         resultElement.textContent = `Failed to submit. Status: ${response.status}`;
       }
     } catch (error) {
+      console.log(error)
       resultElement.textContent = `Error: ${error.message}`;
     }
 
