--- a/homevest.html
+++ b/homevest.html
@@ -202,7 +202,7 @@
 
       <div class="row">
         <div style="position: relative;">
-            <div id="download-homevest" class="row w-50" style="position: absolute; top: 35%; left:6%; padding-left: 7%; padding-right: 7%;">
+            <div id="download-homevest" class="row w-50" style="position: absolute; top: 40%; left:6%; padding-left: 7%; padding-right: 7%;">
                 <div class="col d-flex gap-3">
                   <a href="https://play.google.com/store/apps/details?id=africa.ivantage.app">
                 <img src="./assets/img/androidstore.png" class="img-fluid" alt="">
@@ -212,11 +212,11 @@
                   <img src="./assets/img/applestore.png" class="img-fluid" alt="">
                 </a>
                 </div>
-                <span style="margin-top: 10px; font-size: 3vw; font-weight: bold; color: #001e33;">Or Do You Prefer to Use Web? Click the link below </span>
-                <a href="https://ibs.imperialmortgagebank.com/login" style="font-size: 2vw; font-weight: bold;">Imperial Homes Internet Banking</a>
+                
+                <a href="https://ibs.imperialmortgagebank.com/login" style="font-size: 2vw; font-weight: bold; margin-top: 7vw;">Imperial Homes Internet Banking</a>
             </div>
 
-        <img src="./assets/img/howtogetstartedwithhomevest.png" class="d-block h-10vh w-100 ig-size" alt="...">
+            <img src="./assets/img/How to get started.png" class="d-block h-10vh w-100 ig-size" alt="...">
         
     </div>
     <section id="contact" class="contact">
