--- a/index.html
+++ b/index.html
@@ -532,6 +532,14 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <!-- <script type="text/javascript">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"siqf6cf0320e38cb576198589a705feabdc53415c34995a31cb0dd7fdf085dad9e7cc8f1ce1ff3c645aa98690130f0eeefc", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");</script> <script src="assets/js/main.js"></script> -->
+  <script>
+    const toggle = document.getElementById("toggleShow")
+    const table = document.getElementById("contactTable")
+    toggle.addEventListener("click",function (event) { 
+      event.preventDefault()   
+        table.classList.toggle("d-none")
+  })
+  </script>
 </body>
 
 </html>
