--- a/loaneligibility.html
+++ b/loaneligibility.html
@@ -261,7 +261,7 @@
             <div class="row">
                 <div class="form-group col-md-12 mt-3 mt-md-0">
                     <label for="name"  class="label">Equity Contribution (in %)</label><span style="color: red;" id="equityUpdate">Equity can't be less than 20%</span>
-                    <input type="number"  class="form-control" min="20" max="100" onkeyup="findLoanAmount()" id="equity" placeholder="" >
+                    <input type="number"  class="form-control" min="20" max="100" onkeyup="findLoanAmount()" onchange="findLoanAmount()" id="equity" placeholder="" >
                   </div>
 
              
