--- a/new.html
+++ b/new.html
@@ -437,7 +437,7 @@ Message Sent
                 </div>
                 <div class="p-2 col-lg-3 col-sm-12 align-items-center">
                    Price <br />
-                   <span id="price"></span>
+                   <span id="price" class="price"></span>
 
                 </div>
               </div>
