--- a/loanadmin.html
+++ b/loanadmin.html
@@ -219,8 +219,8 @@
             <li>
               <a
                 class="nav-link scrollto"
-                href="https://blogs.imperialmortgagebank.com"
-                >Blog Posts</a
+                href="IHPay.html"
+                >IHPay</a
               >
             </li>
             <li>
