--- a/privacy.html
+++ b/privacy.html
@@ -160,7 +160,7 @@ p {
           <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
           <li>
-            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blog Posts</a>
+            <a class="nav-link scrollto" href="IHPay.html">IHPay</a>
           </li>
           <li><a id="remv" class="nav-link scrollto" href="https://ibank.imperialmortgagebank.com/bankonline/">Internet Banking</a></li>
         
