--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
               <a class="nav-link scrollto" href="property.html">Properties</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blog Posts</a>
+              <a class="nav-link scrollto" href="IHPay.html">IHPay</a>
             </li>
           
             <li>
