--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                       <h1>Learn More</h1>
                       <ul style="display: flex; flex-direction: column; gap: 5px; font-size: 1.5em;">
                           
-                          <li><a href="https://forms.office.com/pages/responsepage.aspx?id=POjUaIsWr0y5CsReyhbefmrB53cnU3tOhbBkNELNUBRUNzRWQzRaUko3UzdHV1pZNFZSVzdQR0dIOS4u&route=shorturl" target="_blank">Fill a Form and let us help you get started</a> </li>
-                          <li id="toggleShow"> <a href="#">Talk to Our Support Team</a></li>
+                          <li><a href="https://forms.office.com/pages/responsepage.aspx?id=POjUaIsWr0y5CsReyhbefmrB53cnU3tOhbBkNELNUBRUNzRWQzRaUko3UzdHV1pZNFZSVzdQR0dIOS4u&route=shorturl" target="_blank" style="color: #7a6960;">Fill a Form and let us help you get started</a> </li>
+                          <li id="toggleShow"> <a href="#" style="color: #7a6960;">Talk to Our Support Team</a></li>
                           <div class="table-responsive">
                             <table id="contactTable" class="table table-bordered table-striped d-none">
                               <thead>
@@ -221,9 +221,10 @@
                               </tbody>
                             </table>
                           </div>
-                          <li> <a href="https://bit.ly/IHMBHomevest" target="_blank" >See the HomeVest Brochure</a></li>
-                          <li><a href="https://youtu.be/Adp80WMkF88" target="_blank">Watch the Walk-through Animation</a></li>
-                          <li><a href="property.html" target="_blank">Click here to see Properties by our Development Partners</a></li>
+                          <li> <a href="https://bit.ly/IHMBHomevest" target="_blank" style="color: #7a6960;" >See the HomeVest Brochure</a></li>
+                          <li><a href="https://youtu.be/Adp80WMkF88" target="_blank" style="color: #7a6960;">Watch the Walk-through Animation</a></li>
+                          <li><a href="property.html" target="_blank" style="color: #7a6960;">Click here to see Properties by our Development Partners</a></li>
+                          <li><a href="homevestfaq.html" target="_blank" style="color: #7a6960;">Homevest FAQ</a></li>
                       </ul>
                   </article>
           
