moved ihpay tab

--- a/about.html
+++ b/about.html
@@ -108,7 +108,9 @@
                     >Privacy Policy</a
                   >
                 </li>
-                <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
+                <li>
+                  <a class="nav-link scrollto" href="carers.html">Careers</a>
+                </li>
               </ul>
             </li>
             <li>
@@ -116,6 +118,8 @@
                 >Product & Services</a
               >
             </li>
+            <li><a class="nav-link scrollto" href="IHPay.html">IHPay</a></li>
+
             <li class="dropdown">
               <a href="#"
                 ><span>Forms</span>
@@ -178,15 +182,14 @@
             <li>
               <a class="nav-link scrollto" href="contact.html">Support</a>
             </li>
-            <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
+            <li>
+              <a class="nav-link scrollto" href="homevest.html">HomeVest</a>
+            </li>
 
-               <li>
+            <li>
               <a class="nav-link scrollto" href="property.html">Properties</a>
             </li>
-            <li>
-              <a class="nav-link scrollto" href="IHPay.html">IHPay</a>
-            </li>
-          
+
             <li>
               <a
                 id="remv"
@@ -410,8 +413,16 @@
         </div>
       </div>
 
-    <br/>
-      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
+      <br />
+      <center>
+        <strong
+          ><span
+            >Imperial Homes Mortgage Bank is licensed by the Central Bank of
+            Nigeria. All deposits are insured by Nigeria Deposit Insurance
+            Corporation</span
+          ></strong
+        >
+      </center>
       <div class="container py-4">
         <div class="copyright">
           &copy; Copyright
