--- a/directors.html
+++ b/directors.html
@@ -40,7 +40,24 @@
       src="https://kit.fontawesome.com/4635ab7630.js"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"siqf6cf0320e38cb576198589a705feabdc53415c34995a31cb0dd7fdf085dad9e7cc8f1ce1ff3c645aa98690130f0eeefc", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");</script>
+    <script type="text/javascript">
+      var $zoho = $zoho || {};
+      $zoho.salesiq = $zoho.salesiq || {
+        widgetcode:
+          "siqf6cf0320e38cb576198589a705feabdc53415c34995a31cb0dd7fdf085dad9e7cc8f1ce1ff3c645aa98690130f0eeefc",
+        values: {},
+        ready: function () {},
+      };
+      var d = document;
+      s = d.createElement("script");
+      s.type = "text/javascript";
+      s.id = "zsiqscript";
+      s.defer = true;
+      s.src = "https://salesiq.zoho.com/widget";
+      t = d.getElementsByTagName("script")[0];
+      t.parentNode.insertBefore(s, t);
+      d.write("<div id='zsiqwidget'></div>");
+    </script>
     <!-- <style>
       /* Hide slides initially */
       .slides {
@@ -130,7 +147,9 @@
                     >Privacy Policy</a
                   >
                 </li>
-                <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
+                <li>
+                  <a class="nav-link scrollto" href="carers.html">Careers</a>
+                </li>
               </ul>
             </li>
             <li>
@@ -138,6 +157,8 @@
                 >Product & Services</a
               >
             </li>
+            <li><a class="nav-link scrollto" href="IHPay.html">IHPay</a></li>
+
             <li class="dropdown">
               <a href="#"
                 ><span>Forms</span>
@@ -200,14 +221,12 @@
             <li>
               <a class="nav-link scrollto" href="contact.html">Support</a>
             </li>
-            <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
-            
+            <li>
+              <a class="nav-link scrollto" href="homevest.html">HomeVest</a>
+            </li>
 
             <li>
               <a class="nav-link scrollto" href="property.html">Properties</a>
-            </li>
-            <li>
-              <a class="nav-link scrollto" href="IHPay.html">IHPay</a>
             </li>
             <li>
               <a
@@ -692,9 +711,17 @@
           </div>
         </div>
       </div>
-      <br/>
-      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
-    <div class="container py-4">
+      <br />
+      <center>
+        <strong
+          ><span
+            >Imperial Homes Mortgage Bank is licensed by the Central Bank of
+            Nigeria. All deposits are insured by Nigeria Deposit Insurance
+            Corporation</span
+          ></strong
+        >
+      </center>
+      <div class="container py-4">
         <div class="copyright">
           &copy; Copyright
           <strong><span>Imperial Homes Mortgage Bank</span></strong
