--- a/directorsx.html
+++ b/directorsx.html
@@ -110,11 +110,12 @@
                 </li>
               </ul>
             </li>
-            <li>
+           <li>
               <a class="nav-link scrollto" href="productandservices.html"
                 >Product & Services</a
               >
             </li>
+            <li><a class="nav-link scrollto" href="IHPay.html">IHPay</a></li>
             <li class="dropdown">
               <a href="#"
                 ><span>Forms</span>
