--- a/privacy.html
+++ b/privacy.html
@@ -143,6 +143,7 @@ p {
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="productandservices.html">Product & Services</a></li>
+          <li><a class="nav-link scrollto" href="IHPay.html">IHPay</a></li>
           <li class="dropdown"><a href="#"><span>Forms</span> <i class="fa-sharp fa-solid fa-caret-down"></i> </a>
             <ul>
               <li><a href="https://withdrawalrequest.imperialmortgagebank.com/">Withdrawal Request</a></li>
@@ -159,9 +160,7 @@ p {
           <li><a class="nav-link scrollto" href="contact.html">Support</a></li>
           <li><a class="nav-link scrollto" href="homevest.html">HomeVest</a></li>
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
-          <li>
-            <a class="nav-link scrollto" href="IHPay.html">IHPay</a>
-          </li>
+          
           <li><a id="remv" class="nav-link scrollto" href="https://ibank.imperialmortgagebank.com/bankonline/">Internet Banking</a></li>
         
           <li><a id="remv" class="nav-link scrollto" href="https://www.accountopening.imperialmortgagebank.com/">Open Account</a></li>
