--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
           >
             <div class="info">
               <h1>Our Vision</h1>
-              <p>To offer houing finance solutions to our customers, by leveraging technology, through a motivated workforce, while profitably rendering unique products and services timely and efficiently </p>
+              <p>To offer housing finance solutions to our customers, by leveraging technology, through a motivated workforce, while profitably rendering unique products and services timely and efficiently. </p>
             </div>
           </div>
           <div
