--- a/homevest.html
+++ b/homevest.html
@@ -214,13 +214,13 @@
                                   </tr>
                                   <tr>
                                     <td class="text-nowrap">Aderemi Onifade</td>
-                                    <td class="text-nowrap">aderemi.onifade@@imperialmortgagebank.com</td>
+                                    <td class="text-nowrap">aderemi.onifade@imperialmortgagebank.com</td>
                                     <td class="text-nowrap">0806 682 8476</td> 
                                   </tr>
                                 </tbody>
                               </table>
                             </div>
-                            <li> <a href="https://bit.ly/IHMBHomevest" target="_blank" >See the HomeVest Brochure</a></li>
+                            <li> <a href="https://bit.ly/HomevestBrochure" target="_blank" >See the HomeVest Brochure</a></li>
                             <li><a href="https://youtu.be/Adp80WMkF88" target="_blank">Watch the Walk-through Animation</a></li>
                             <li><a href="property.html" target="_blank">Click here to see Properties by our Development Partners</a></li>
                         </ul>
